--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "nodemailer": "^7.0.12",
     "pg": "^8.11.3",
-    "dotenv": "^16.3.1"
+    "square": "^43.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
